# WillEngineV2

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  readme.txt
.github/workflows/: windows-build.yml
assets/: settings.willengine
assets/environments/: mud_road_puresky_4k.hdr  readme.txt  wasteland_clouds_4k.hdr  wasteland_clouds_puresky_4k.hdr
assets/maps/: CHANGELIST.md  newMap.willmap  sampleScene.willmap  sampleScene2.willmap
assets/models/: AlphaBlendModeTest.willmodel  CHANGELIST.md  checkered_floor.glb  cube.gltf  mySphere.glb  mySphere.willmodel  primitives.willmodel  sponza-ktx.glb  sponza-ktx.willmodel  sponza-uastc.glb  sponza-uastc.willmodel  teapot.gltf
assets/models/avocado/: Avocado.gltf
assets/models/primitives/: primitives.gltf  primitives.willmodel
assets/models/sponza/: Sponza01.gltf  Sponza01.willmodel  background.ktx  chain_texture.ktx  lion.ktx  spnza_bricks_a_diff.ktx  sponza_arch_diff.ktx  sponza_ceiling_a_diff.ktx  sponza_column_a_diff.ktx  sponza_column_b_diff.ktx  sponza_column_c_diff.ktx  sponza_curtain_blue_diff.ktx  sponza_curtain_diff.ktx  sponza_curtain_green_diff.ktx  sponza_details_diff.ktx  sponza_fabric_blue_diff.ktx  sponza_fabric_diff.ktx  sponza_fabric_green_diff.ktx  sponza_flagpole_diff.ktx  sponza_floor_a_diff.ktx  sponza_roof_diff.ktx  sponza_thorn_diff.ktx  vase_dif.ktx  vase_hanging.ktx  vase_plant.ktx  vase_round.ktx
assets/models/sponza2/: Sponza.willmodel
assets/scenes/: sampleScene.willmap
assets/textures/: brown_mud_leaves_01_diff_2k.willtexture  brown_mud_leaves_01_disp_2k.willtexture  rock_face_03_diff_2k.willtexture  rock_face_03_disp_2k.willtexture  rocky_trail_02_diff_2k.willtexture  rocky_trail_02_disp_2k.willtexture  sandy_gravel_02_diff_2k.willtexture  sandy_gravel_02_disp_2k.willtexture
assets/willmodels/: ABeautifulGame.willmodel  MetalRoughSpheres.willmodel  Sponza.willmodel  cube.willmodel  mySphere.willmodel  primitives.willmodel
branding/: create_regs.bat  readme.md
lib/: SDL2.exp  SDL2d.exp  SDL2main.lib  SDL2maind.lib  SDL3.lib  SDL3d.lib  ktx.lib  ktxd.lib  shaderc_combined.lib  shaderc_combined.version  shaderc_combinedd.lib  volk.lib  volkd.lib
shaders/: compile_shaders.sh  compile_shaders_fast.sh  compute.comp  cube.frag  cube.vert  deferred.frag  deferred.vert  deferredMrt.frag  deferredMrt.vert  deferredResolve.comp  depthPrepass.vert  environment.frag  environment.vert  fragment.frag  frustumCull.comp  pbr.frag  pbr.vert  postProcess.comp  shading.comp  taa.comp  transparent.frag  transparent.vert  transparentComposite.frag  transparentComposite.vert  vertex.vert  visibility_pass.comp
shaders/ambient_occlusion/ground_truth/: gtao.comp  gtao_depth_prefilter.comp  gtao_main_pass.comp  gtao_spatial_filter.comp  gtao_temporal_accumulation.comp
shaders/basic/: compute.comp  fragment.frag  vertex.vert
shaders/debug/: debug_composite.comp  debug_highlight_renderer.vert  debug_highlighter.frag  debug_highlighter.vert  debug_highlighter_processing.comp  debug_pipeline.comp  debug_renderer.vert  debug_renderer_instanced.frag  debug_renderer_instanced.vert
shaders/environment/: brdflut.comp  cubetodiffirra.comp  cubetospecprefilter.comp  environment.frag  environment.vert  equitoface.comp
shaders/include/: colors.glsl  common.glsl  depth.glsl  environment.glsl  fxaa.glsl  gtao.glsl  lights.glsl  main.glsl  pbr.glsl  scene.glsl  shadows.glsl  structure.glsl  transparent.glsl
shaders/shadows/: contact_shadow_pass.comp  shadow_pass.frag  shadow_pass.vert  shadows.glsl  terrain_shadow_pass.tesc  terrain_shadow_pass.tese  terrain_shadow_pass.vert
shaders/terrain/: terrain.frag  terrain.tesc  terrain.tese  terrain.vert
src/: resources.h  resources.rc
src/core/: Engine.cpp  Engine.h  VkDescriptors.cpp  VkTypes.cpp  VkTypes.h  engine.cpp  engine.h  engine_types.h  environment.cpp  environment.h  game_object.cpp  game_object.h  imgui_wrapper.cpp  input.cpp  input.h  render_object.cpp  render_object.h  scene.cpp  scene.h  time.cpp  time.h  time_utils.cpp  time_utils.h  transform.cpp  transform.h
src/core/camera/: camera.cpp  camera.h  camera_types.h  free_camera.cpp  free_camera.h  orbit_camera.cpp  orbit_camera.h
src/core/draw/: draw_structure.cpp  draw_structure.h  environment.cpp  environment.h  render_object.cpp  render_object.h
src/core/game_object/: component_container.h  game_object.cpp  game_object.h  game_object_factory.cpp  hierarchical.h  physics_body.h  renderable.h  terrain.h  transformable.h
src/core/identifier/: identifiable.h  identifier_manager.cpp  identifier_manager.h
src/core/profiler/: profiler.h
src/core/scene/: map.cpp  map.h  scene.cpp  scene.h  scene_serializer.cpp  scene_serializer.h  serializer.cpp  serializer.h  serializer_constants.h  serializer_types.h
src/engine/: engine_constants.h
src/engine/core/: engine.cpp  engine.h  engine_types.cpp  engine_types.h  input.cpp  input.h  time.cpp  time.h  transform.cpp  transform.h
src/engine/physics/: physics.h  physics_constants.h  physics_filters.cpp  physics_filters.h  physics_types.h  physics_utils.cpp  physics_utils.h
src/engine/util/: file.h  (+6 more)
src/physics/: physics.cpp  physics.h  physics_body.cpp  physics_body.h  physics_constants.h  physics_filters.cpp  physics_filters.h  physics_types.cpp  physics_types.h  physics_utils.cpp  physics_utils.h
src/profiler/: profiler.cpp
src/renderer/: imgui_wrapper.cpp  imgui_wrapper.h  immediate_submitter.h  render_system.cpp  render_system.h  renderer_constants.h  resource_manager.cpp  resource_manager.h  vk_descriptor_buffer.cpp  vk_descriptor_buffer.h  vk_descriptors.cpp  vk_descriptors.h  vk_helpers.cpp  vk_helpers.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h  vulkan_context.cpp  vulkan_context.h
src/util/: VkHelpers.cpp  VkHelpers.h  file.h  file_utils.cpp  file_utils.h  halton.cpp  halton.h  heightmap_utils.h  math_constants.h  math_utils.h  model_utils.cpp  model_utils.h  noise_utils.h  render_utils.h  time_utils.cpp  time_utils.h  transform.h  vk_helpers.cpp  vk_helpers.h
(+422 files in other folders)
